Adding initial focus to btn

--- a/client/index.html
+++ b/client/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Book Splash Mania Waterpark Tickets | Best Deals & Discounts</title>
-        <meta name="description" content="Learn about all your Splash Mania ticket options and book now to spend a day of family fun at one of Malaysia's most popular waterparks! ✓Best Prices ✓Online Reservations ✓Advance Booking ✓Ticket Discounts ✓Group Bookings">
+        <title>Visit Wet World Water Park Shah Alam | Best Deals & Discounts</title>
+        <meta name="description" content="Planning to visit Wet World Water Park Shah Alam in Selangor? Learn all about spending a day of family fun here! Opening Hours | Getting There | Tickets & more. ✓Free Cancellation ✓Online Reservations ✓Extended Flexibility">
   </head>
   <body>
     <div id="root"></div>
